--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <h1>PyBlog</h1>
     {% for post in posts %}
         <div class='post'>
-            <h3>{{ post.title }}</h3>
+            <h3 class='post-title'>{{ post.title }}</h3>
+            <p class='post-time'>Published on: <span>{{ post.pub_date }}</span></p>
             <p>{{ post.body }}</p>
         </div>
     {% endfor %}
