--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,10 @@
 {% block content %}
     <h1>Login to contribute</h1>
     <form class='login-form' action='/login' method='POST'>
-        <lable>
+        <label>
             Email
             <input type='email' name='email' value='{{ email }}' />
-        </lable>
+        </label>
         <label>
             Password
             <input type='password' name='password' />
